--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,8 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 
-html, body { height: 100%; }
+html, body, app-root {
+  height: 100%;
+  margin: 0;
+  }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
