add new features into stone page

--- a/src/app/linepair/login/login.component.html
+++ b/src/app/linepair/login/login.component.html
@@ -1,8 +1,8 @@
 
 
 <!-- The video -->
-<video autoplay muted loop  (click) ="toggleVideo()" #videoPlayer>
-  <source src="../../../assets/Videos/linepair.mp4" type="video/mp4">
+<video autoplay muted loop  (click) ="toggleVideo()" #videoPlayer id="myVideo">
+  <source src="https://leecloud.blob.core.windows.net/image/linepair.mp4" type="video/mp4">
 </video>
 
 
