--- a/src/app/stoneweight.component.html
+++ b/src/app/stoneweight.component.html
@@ -55,7 +55,7 @@
                 <option value="玉鐲">玉鐲</option>
                 <option value="翡翠配件">翡翠配件</option>
                 <option value="玉把玩件">玉把玩件</option>
-                <option value="玉雕">玉把玩件</option>
+                <option value="玉雕">玉雕</option>
                 <option value="壽山石">壽山石</option>
                 <option value="其他">其他</option>
               </select>
