inv extend upload

--- a/src/app/clientinventory/invshow/invshow.component.html
+++ b/src/app/clientinventory/invshow/invshow.component.html
@@ -17,264 +17,286 @@
 </carousel>
 <p></p>
 <form>
-    <div *ngIf="IsManager">
-           <button type="button" class="btn btn-success" onclick="location.href='#/clientlist';">返回列表</button>
-           <p></p>
-   </div>
+  <div *ngIf="IsManager">
+    <button type="button" class="btn btn-success" onclick="location.href='#/clientlist';">返回列表</button>
+    <p></p>
+  </div>
 
   <div class="form-group">
-        <table class="table table-bordered table-striped">
-                <tbody>
+    <table class="table table-bordered table-striped">
+      <tbody>
 
-                    <tr>
+        <tr>
 
-                        <td>
-                            客戶編號:
-                        </td>
-                        <TD>
-                                {{Entity.ClientId}}
-                        </TD>
-                    </tr>
-                    <tr>
-                        <td>
-                               客戶名稱:
-                        </td>
-                        <td>
-                            <b><h1 class="h4">{{Entity.ClientName}} </h1></b>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            地址:
-                        </td>
-                        <td>
-                                {{Entity.Address}}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            電話:
-                        </td>
-                        <td>
-                            {{Entity.Phone}}
-                        </td>
-                </tbody>
-        </table>
-        <div>
-          <table class="table table-bordered table-striped table-hover">
-            <tr>
-              <th>
-                每月倉儲管理費
-              </th>
-              <th>
-                上次付費日期
-              </th>
-              <th>
-                下次付費日期
-              </th>
-              <th>
-                備註
-              </th>
-            </tr>
-            <tr>
-              <td>{{paymentInfo.Info.TotalFee}}</td>
-              <td>{{paymentInfo.Info.LastPaymentDate}}</td>
-              <td>{{paymentInfo.Info.NextPaymentDate}}</td>
-              <td>{{paymentInfo.Info.Comment}}</td>
-            </tr>
-            <tr>
-              <td colspan="4">
-                <table>
-                  <tbody>
-                    <tr *ngFor = 'let item of paymentInfo.InfoHistory; let x = index  ' >
-                      <td>
-                        {{item.Date}}
-                      </td>
-                      <td>
-                        {{item.Item}}
-                      </td>
-                      <td>
-                        {{item.PaymentType}}
-                      </td>
-                      <td>
-                        {{item.Amount}}
-                      </td>
-                      <td>
-                        {{item.Comment}}
-                      </td>
-                    </tr>
-                  </tbody>
-
-                </table>
-              </td>
-            </tr>
-          </table>
-        </div>
-
-        <div *ngIf="!IsManager">
-          <button type="button" class="btn btn-primary" (click)="exportexcel()" ><mat-icon> cloud_download</mat-icon> 下載Excel</button>
-        </div>
-        <br>
-        <div *ngIf="IsManager" >
-            <table class="table table-bordered table-striped table-hover"  >
-                <tr>
-                    <th>
-                        序號
-                    </th>
-                    <th>
-                       產品編號
-                    </th>
-                    <th>
-                        產品名稱
-                    </th>
-                    <th>
-                        入庫數量
-                    </th>
-                    <th>
-                        單位
-                    </th>
-                    <th>
-                        出庫數量
-                    </th>
-                    <th>
-                        庫存量
-                  </th>
+          <td>
+            客戶編號:
+          </td>
+          <TD>
+            {{Entity.ClientId}}
+          </TD>
+        </tr>
+        <tr>
+          <td>
+            客戶名稱:
+          </td>
+          <td>
+            <b>
+              <h1 class="h4">{{Entity.ClientName}} </h1>
+            </b>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            地址:
+          </td>
+          <td>
+            {{Entity.Address}}
+          </td>
+        </tr>
+        <tr>
+          <td>
+            電話:
+          </td>
+          <td>
+            {{Entity.Phone}}
+          </td>
+      </tbody>
+    </table>
+    <div>
+      <table class="table table-bordered table-striped table-hover">
+        <tr>
+          <th>
+            每月倉儲管理費
+          </th>
+          <th>
+            上次付費日期
+          </th>
+          <th>
+            下次付費日期
+          </th>
+          <th>
+            備註
+          </th>
+        </tr>
+        <tr>
+          <td>{{paymentInfo.Info.TotalFee}}</td>
+          <td>{{paymentInfo.Info.LastPaymentDate}}</td>
+          <td>{{paymentInfo.Info.NextPaymentDate}}</td>
+          <td>{{paymentInfo.Info.Comment}}</td>
+        </tr>
+        <tr>
+          <td colspan="4">
+            <table>
+              <tbody>
+                <tr *ngFor='let item of paymentInfo.InfoHistory; let x = index  '>
+                  <td>
+                    {{item.Date}}
+                  </td>
+                  <td>
+                    {{item.Item}}
+                  </td>
+                  <td>
+                    {{item.PaymentType}}
+                  </td>
+                  <td>
+                    {{item.Amount}}
+                  </td>
+                  <td>
+                    {{item.Comment}}
+                  </td>
                 </tr>
-
-
-                    <tbody>
-                        <tr *ngFor = 'let item of Entity.Inventories; let x = index  ' >
-                            <td>
-                                {{ x  + 1 }}
-                            </td>
-                            <td>
-                                {{item.ProductId}}
-                            </td>
-                            <td>
-                                {{ item.ProductName}}
-                            </td>
-                            <td>{{ item.Stock }}</td>
-
-                            <td>
-                                {{ item.Unit }}
-                            </td>
-                            <td>
-                                {{ item.Return}}
-                            </td>
-                            <td>
-                                {{ item.NotReturn}}
-                            </td>
-
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                            <tr>
-                              <td>總計</td>
-                              <td>
-
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-                                    {{ stock_sum }}
-
-                                </td>
-
-                                <td>
-
-                                </td>
-                                <td>
-                                    {{ return_sum}}
-                                </td>
-                                <td>
-                                    {{ notreturn_sum }}
-                                </td>
-                            </tr>
-                    </tfoot>
+              </tbody>
 
             </table>
-        </div>
-        <div *ngIf="!IsManager">
-            <table class="table table-bordered table-striped table-hover" id = 'excel-table' #exceltable  >
-                <tr>
-                        <th>
-                                序號
-                            </th>
-                            <th>
-                               產品編號
-                            </th>
-                            <th>
-                                產品名稱
-                            </th>
-                            <th>
-                                入庫數量
-                            </th>
-                            <th>
-                                單位
-                            </th>
-                            <th>
-                                出庫數量
-                            </th>
-                            <th>
-                                庫存量
-                          </th>
-                </tr>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <div *ngIf="!IsManager">
+      <button type="button" class="btn btn-primary" (click)="exportexcel()">
+        <mat-icon> cloud_download</mat-icon> 下載Excel
+      </button>
+    </div>
+    <br>
+    <div *ngIf="IsManager">
+      <table class="table table-bordered table-striped table-hover">
+        <tr>
+          <th>
+            序號
+          </th>
+          <th>
+            產品編號
+          </th>
+          <th>
+            產品名稱
+          </th>
+          <th>
+            入庫數量
+          </th>
+          <th>
+            單位
+          </th>
+          <th>
+            出庫數量
+          </th>
+          <th>
+            庫存量
+          </th>
+          <th>
+            產品大類
+          </th>
+          <th>
+            產品條碼
+          </th>
+          <th>
+            倉架位置
+          </th>
+        </tr>
 
 
-                    <tbody>
-                        <tr *ngFor = 'let item of userInvertories; let x = index;' >
-                            <td>
-                                {{ x  + 1 }}
-                            </td>
-                            <td>
-                                {{item.ProductId}}
-                            </td>
-                            <td>
-                                {{ item.ProductName}}
-                            </td>
-                            <td>{{ item.Stock }}</td>
+        <tbody>
+          <tr *ngFor='let item of Entity.Inventories; let x = index  '>
+            <td>
+              {{ x  + 1 }}
+            </td>
+            <td>
+              {{item.ProductId}}
+            </td>
+            <td>
+              {{ item.ProductName}}
+            </td>
+            <td>{{ item.Stock }}</td>
 
-                            <td>
-                                {{ item.Unit }}
-                            </td>
-                            <td>
-                                {{ item.Return}}
-                            </td>
-                            <td>
-                                {{ item.NotReturn}}
-                            </td>
+            <td>
+              {{ item.Unit }}
+            </td>
+            <td>
+              {{ item.Return}}
+            </td>
+            <td>
+              {{ item.NotReturn}}
+            </td>
+            <td>
+              {{GetExtendedVal(item.ProductId, 'GroupId')}}
+            </td>
+            <td>
+              {{GetExtendedVal(item.ProductId, 'BarCode')}}
+            </td>
+            <td>
+              {{GetExtendedVal(item.ProductId, 'LocationId')}}
+            </td>
 
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                            <tr>
-                              <td>總計</td>
-                              <td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td>總計</td>
+            <td>
 
-                                </td>
-                                <td>
+            </td>
+            <td>
 
-                                </td>
-                                <td>
-                                    {{ stock_sum }}
+            </td>
+            <td>
+              {{ stock_sum }}
 
-                                </td>
+            </td>
 
-                                <td>
+            <td>
 
-                                </td>
-                                <td>
-                                    {{ return_sum}}
-                                </td>
-                                <td>
-                                    {{ notreturn_sum }}
-                                </td>
-                            </tr>
-                          </tfoot>
+            </td>
+            <td>
+              {{ return_sum}}
+            </td>
+            <td>
+              {{ notreturn_sum }}
+            </td>
+          </tr>
+        </tfoot>
 
-            </table>
-        </div>
+      </table>
+    </div>
+    <div *ngIf="!IsManager">
+      <table class="table table-bordered table-striped table-hover" id='excel-table' #exceltable>
+        <tr>
+          <th>
+            序號
+          </th>
+          <th>
+            產品編號
+          </th>
+          <th>
+            產品名稱
+          </th>
+          <th>
+            入庫數量
+          </th>
+          <th>
+            單位
+          </th>
+          <th>
+            出庫數量
+          </th>
+          <th>
+            庫存量
+          </th>
+        </tr>
+
+
+        <tbody>
+          <tr *ngFor='let item of userInvertories; let x = index;'>
+            <td>
+              {{ x  + 1 }}
+            </td>
+            <td>
+              {{item.ProductId}}
+            </td>
+            <td>
+              {{ item.ProductName}}
+            </td>
+            <td>{{ item.Stock }}</td>
+
+            <td>
+              {{ item.Unit }}
+            </td>
+            <td>
+              {{ item.Return}}
+            </td>
+            <td>
+              {{ item.NotReturn}}
+            </td>
+
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td>總計</td>
+            <td>
+
+            </td>
+            <td>
+
+            </td>
+            <td>
+              {{ stock_sum }}
+
+            </td>
+
+            <td>
+
+            </td>
+            <td>
+              {{ return_sum}}
+            </td>
+            <td>
+              {{ notreturn_sum }}
+            </td>
+          </tr>
+        </tfoot>
+
+      </table>
+    </div>
 
 
 
@@ -284,22 +306,22 @@
       <p></p>
     </div>
 
-        <h2>近六月溫濕度資料表</h2>
-        <carousel  interval="0">
-                <slide *ngFor="let item of images">
-                  <img [src]="item.ImageUrl" alt="Pages" style="display: block; width: 100%;">
-                  <div class="carousel-caption d-none d-md-block">
-                  </div>
-                </slide>
-        </carousel>
-
-        <div *ngIf="IsManager">
-            <p></p>
-                <button type="button" class="btn btn-success" onclick="location.href='#/clientlist';">返回列表</button>
-                <p></p>
+    <h2>近六月溫濕度資料表</h2>
+    <carousel interval="0">
+      <slide *ngFor="let item of images">
+        <img [src]="item.ImageUrl" alt="Pages" style="display: block; width: 100%;">
+        <div class="carousel-caption d-none d-md-block">
         </div>
+      </slide>
+    </carousel>
 
-        <hr>
+    <div *ngIf="IsManager">
+      <p></p>
+      <button type="button" class="btn btn-success" onclick="location.href='#/clientlist';">返回列表</button>
+      <p></p>
+    </div>
+
+    <hr>
 
 
     <ul>
