search add extend fields

--- a/src/app/clientinventory/invshow/invshow.component.html
+++ b/src/app/clientinventory/invshow/invshow.component.html
@@ -178,13 +178,13 @@
               {{ item.NotReturn}}
             </td>
             <td>
-              {{GetExtendedVal(item.ProductId, 'GroupId')}}
+              {{item.GroupId}}
             </td>
             <td>
-              {{GetExtendedVal(item.ProductId, 'BarCode')}}
+              {{item.BarCode}}
             </td>
             <td>
-              {{GetExtendedVal(item.ProductId, 'LocationId')}}
+              {{item.LocationId}}
             </td>
 
           </tr>
