--- a/src/app/clientinventory/invlist/invlist.component.html
+++ b/src/app/clientinventory/invlist/invlist.component.html
@@ -2,10 +2,10 @@
         <span> <img src='../assets/Photos/tealogo.jpg' width=20% height=20% /></span>
         <p></p>
     </div>
-    
-    <h1>所有客戶庫存表</h1>   
+
+    <h1>所有客戶庫存表</h1>
     <div>
-            <button type="button" class="btn btn-success" onclick="location.href='#/teaportal';">返回管理頁面</button>   
+            <button type="button" class="btn btn-success" onclick="location.href='#/teaportal';">返回管理頁面</button>
             <p></p>
     </div>
     <div class="form form-row">
@@ -13,7 +13,7 @@
         <input type="string" placeholder="編號或名稱" class="form form-control"
         [(ngModel)]='Search'
         style="width: 8em;"
-        /> 
+        />
     </div>
     <p></p>
     <table class="table table-bordered table-striped table-hover">
@@ -26,7 +26,7 @@
             </th>
             <th>
                 地址
-            </th>    
+            </th>
             <th>
                 電話
             </th>
@@ -34,21 +34,23 @@
 
             </th>
         </tr>
-        
-           
-            <tbody> 
+
+
+            <tbody>
                 <tr *ngFor = 'let item of list' >
                     <td>
                         {{item.ClientId}}
+
+                        <button type="button" class="btn btn-sm btn-primary" (click) = EditClientInfo(item)>編輯</button>
                     </td>
                     <td>{{ item.ClientName}}
-                          
+
                     </td>
                     <td>{{ item.Address}}</td>
                     <td>
                         {{item.Phone}}
                     </td>
-                  
+
                     <td>
                         <button type="button" class="btn btn-sm btn-success" (click) = showEntity(item.ClientId)>庫藏內容</button> |
                         <button type="button" class="btn btn-sm btn-info" (click) = showUserEntity(item.ClientId)>藏家頁面</button> |
@@ -56,14 +58,14 @@
                     </td>
                 </tr>
             </tbody>
-           
+
     </table>
-    
+
     <div>
-            <button type="button" class="btn btn-success" onclick="location.href='#/teaportal';">返回管理頁面</button>   
+            <button type="button" class="btn btn-success" onclick="location.href='#/teaportal';">返回管理頁面</button>
             <p></p>
     </div>
-    
+
     <ngx-spinner
       bdColor="rgba(51,51,51,0.8)"
       size="medium"
