fix background scroll issues

--- a/src/app/teagrade/qfinal/qfinal.component.css
+++ b/src/app/teagrade/qfinal/qfinal.component.css
@@ -53,12 +53,13 @@ body, html {
 }
 
 .background {
-
   position: fixed;
   right: 0;
   bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+  overflow-y:scroll;
+  overflow-x:hidden;
+  height: 100%;
+  width: 100%;
   background-image: url('./../../../assets/Photos/b1.jpg');
   opacity: 0.5;
   background-position: center;
