--- a/src/app/teagrade/q1/q1.component.css
+++ b/src/app/teagrade/q1/q1.component.css
@@ -8,10 +8,12 @@ body, html {
   flex-direction: column;
   text-align: center;
   padding: 70px 0;
+  position: relative
 
 }
 
 .question {
+
   font-size: 40px;
   font-weight: bold;
   font-style: normal;
@@ -21,6 +23,7 @@ body, html {
   color: #a2a2be;
   width: 100%;
   padding: 20px;
+
 }
 
 .answer{
@@ -32,15 +35,16 @@ body, html {
   width: 100%;
   padding: 20px;
   cursor: pointer;
-}
+ }
 
 .background {
-
   position: fixed;
   right: 0;
   bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+  overflow-y:scroll;
+  overflow-x:hidden;
+  height: 100%;
+  width: 100%;
   background-image: url('./../../../assets/Photos/b1.jpg');
   opacity: 0.5;
   background-position: center;
