--- a/src/app/clientinventory/invupload/invupload.component.html
+++ b/src/app/clientinventory/invupload/invupload.component.html
@@ -25,7 +25,7 @@
 </div>
 <hr>
 
-<!-- <h2>上傳普洱茶倉儲Excel檔案(.xlsx):(全部更新:將會覆蓋掉之前紀錄 重新更新資料庫)</h2>
+<h2>上傳普洱茶倉儲Excel檔案(.xlsx):(全部更新:將會覆蓋掉之前紀錄 重新更新資料庫)</h2>
 
 <div class="body-content">
   <div class="center">
@@ -40,7 +40,7 @@
 
   </div>
 </div>
-<hr> -->
+<hr>
 <h2>上傳普洱茶倉儲溫度紀錄照片(.jpg):</h2>
 <div class="body-content">
   <div class="center">
