tea grade fixes

--- a/src/app/teagrade/qfinal/qfinal.component.html
+++ b/src/app/teagrade/qfinal/qfinal.component.html
@@ -5,7 +5,9 @@
        <div class="question">您的茶評量分數: {{TotalScore}}</div>
       <p></p>
       <br>
-
+  <button class="answer" mat-button	 color="accent"	(click)="click1()"><i class="far fa-hand-point-right"></i> 請到下一頁 </button>
+  <p></p>
+  <br>
   <table id = "customers">
     <tr>
         <th>
