--- a/src/app/teagrade/q5/q5.component.css
+++ b/src/app/teagrade/q5/q5.component.css
@@ -15,13 +15,14 @@ body, html {
   font-size: 40px;
   font-weight: bold;
   font-style: normal;
-  line-height: 26pt;
-  background: rgb(0, 0, 0);/* Fallback color */
-  background: rgba(0, 0, 0, 0.5);/* Black background with 0.5 opacity */
-  color: #a2a2be;
+  line-height: 30pt;
+  background: rgb(212, 116, 6);/* Fallback color */
+  background: rgb(235, 107, 3);/* Black background with 0.5 opacity */
+  color:white;
   width: 100%;
   padding: 20px;
 }
+
 
 .answer{
   font-size: 36px;
