--- a/src/app/teagrade/qsurvey/qsurvey.component.html
+++ b/src/app/teagrade/qsurvey/qsurvey.component.html
@@ -69,7 +69,7 @@
       <p></p>
       <br>
 
-      <button class="question"  (click)="SaveEntity()"> 上傳</button>
+      <button class="question"  (click)="SaveEntity()"> <i class="fas fa-cloud-upload-alt"></i> 上傳</button>
 
   </div>
 
